--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -81,6 +81,7 @@ modrinth {
     projectId = "avq72s6C" // This can be the project ID or the slug. Either will work!
     versionNumber = project.mod_version // You don't need to set this manually. Will fail if Modrinth has this version already
     versionType = "release" // This is the default -- can also be `beta` or `alpha`
+    versionName = "${project.mod_version} [FORGE]"
     uploadFile = shadowJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
     gameVersions = [project.minecraft_version] // Must be an array, even with only one version
     changelog = project.hasProperty('changeLog') ?
