--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -22,6 +22,10 @@ dependencies {
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
+
+    // EMI
+    modCompileOnly "dev.emi:emi-forge:${rootProject.emi_version}:api"
+    modLocalRuntime "dev.emi:emi-forge:${rootProject.emi_version}"
 }
 
 processResources {
