--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,6 +4,9 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury:${rootProject.architectury_version}"
+
+    // EMI
+    modCompileOnly "dev.emi:emi-xplat-intermediary:${rootProject.emi_version}:api"
 }
 
 architectury {
