--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,11 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.20.1
 
 archives_base_name=YAAM
-mod_version=1.0.0b
+mod_version=1.0.0c
 maven_group=dk.sebsa
 
 architectury_version=9.1.12
+emi_version=1.0.22+1.20.1
 
 fabric_loader_version=0.14.23
 fabric_api_version=0.89.3+1.20.1
