--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,17 @@ subprojects {
         silentMojangMappingsLicense()
     }
 
+    repositories {
+        maven { url 'https://maven.parchmentmc.org' }
+    }
+
     dependencies {
         minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
         // The following line declares the mojmap mappings, you may use other mappings as well
-        mappings loom.officialMojangMappings()
+        mappings loom.layered() {
+            officialMojangMappings()
+            parchment("org.parchmentmc.data:parchment-1.20.1:2023.06.26@zip")
+        }
         // The following line declares the yarn mappings you may select this one as well.
         // mappings "net.fabricmc:yarn:@YARN_MAPPINGS@:v2"
     }
