--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.20.1
 
 archives_base_name=YAAM
-mod_version=1.0.1a
+mod_version=1.0.1b
 maven_group=dk.sebsa
 
 architectury_version=9.1.12
